force-app/main/default/objects/Installation__c/fields/Alert_Flag__c.field-meta.xml
<CustomField>
    <fullName>Alert_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alert Flag</label>
    <type>Checkbox</type>
</CustomField>