force-app/main/default/objects/Installation__c/fields/Assigned_Manager__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Managed_Installations</relationshipName>
    <type>Lookup</type>
</CustomField>