force-app/main/default/objects/Installation__c/fields/Days_to_Deadline_c__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Deadline_c__c</fullName>
    <formula>IF(
  ISBLANK(Deadline_Date__c),
  NULL,
  IF(
    ISPICKVAL(Status__c, &quot;Completed&quot;),
    0,
    Deadline_Date__c - TODAY()
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days_to_Deadline__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>