force-app/main/default/objects/Installation__c/fields/Deadline_Date__c.field-meta.xml
<CustomField>
    <fullName>Deadline_Date__c</fullName>
    <label>Deadline Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>