force-app/main/default/objects/Installation__c/fields/Panel_Count__c.field-meta.xml
<CustomField>
    <fullName>Panel_Count__c</fullName>
    <label>Panel Count</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>