force-app/main/default/objects/Installation__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>North</fullName><default>false</default></value>
            <value><fullName>South</fullName><default>false</default></value>
            <value><fullName>East</fullName><default>false</default></value>
            <value><fullName>West</fullName><default>false</default></value>
            <value><fullName>Central</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>