force-app/main/default/objects/Installation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default></value>
            <value><fullName>Scheduled</fullName><default>false</default></value>
            <value><fullName>In Progress</fullName><default>false</default></value>
            <value><fullName>Completed</fullName><default>false</default></value>
            <value><fullName>Cancelled</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>