force-app/main/default/objects/Installation__c/fields/Total_Routes__c.field-meta.xml
<CustomField>
    <fullName>Total_Routes__c</fullName>
    <label>Total Routes</label>
    <summaryForeignKey>Field_Route__c.Installation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>