force-app/main/default/objects/Installation__c/validationRules/Prevent_Past_Deadline.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Past_Deadline</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISNEW()),
  ISCHANGED(Deadline_Date__c),
  Deadline_Date__c &lt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>Deadline_Date__c</errorDisplayField>
    <errorMessage>Deadline Date cannot be set to a past date. Please select a future date.</errorMessage>
</ValidationRule>